# python-module-template

./: .dockerignore  .gitignore  AUTHORS  Dockerfile  README.md  requirements.txt  setup-requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.circleci/: config.yml
src/module/: __init__.py  module.py
src/module/scripts/: __init__.py  script_1.py  script_2.py
tests/: __init__.py  testModule.py
