[metadata]
name = module
description = description
description-file = README.rst
author = Maxi Marufo <maxi.marufo@zoomagri.com>
author_email = maxi.marufo@zoomagri.com
home-page = https://github.com/maxi-marufo
license = GPL
classifiers =
  Development Status :: 3 - Alpha
  Programming Language :: Python :: 2 / 3
  Intended Audience :: Developers
keywords =
  Python
  module
  docker
  ci
  circleCI

[flake8]
ignore = F999,E501,E128,E124,E402,W503,E731,C901

[entry_points]
console_scripts =
  module-script-1 = module.scripts.script_1:main
  module-script-2 = module.scripts.script_2:main

[nosetests]
where=../tests/
verbosity=2
logging-level=INFO
stop=1
detailed-errors=1
nocapture=1
nologcapture=1
with-coverage=0
cover-erase=1
cover-html=1
cover-html-dir=../cover
with-cprofile=1
cprofile-stats-file=../profile/stats.dat
cprofile-stats-erase=1
with-id=1
pdb=0
